--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ colorama==0.4.6
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
-imblearn
+imbalanced-learn==0.10.1
 Jinja2==3.1.6
 joblib==1.5.1
 jsonschema==4.24.0
@@ -28,7 +28,7 @@ pytz==2025.2
 referencing==0.36.2
 requests==2.32.4
 rpds-py==0.26.0
-scikit-learn==1.7.0
+scikit-learn==1.2.2
 scipy==1.15.3
 six==1.17.0
 smmap==5.0.2
